# Install tile schemes

install (FILES tile_schemes/default/0.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/1.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/2.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/3.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/4.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/5.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/6.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/7.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/back.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
