# Install tile schemes

install (FILES tile_schemes/default/0.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/1.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/2.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/3.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/4.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/5.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/6.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/7.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/8.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/9.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/10.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/11.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/12.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/13.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/14.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/15.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/16.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/17.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/18.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/19.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/20.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/21.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/22.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/23.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/24.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/25.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/26.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/27.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/28.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/29.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/30.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/31.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
install (FILES tile_schemes/default/back.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/elememory/tile_schemes/default)
